# RL_H1_locomotion

./: .gitignore  Git 명령어.txt  README.md  __init__.py  install_and_fix_dependencies.sh  pyproject.toml  setup.py
config/: README.md  __init__.py  extension.toml
config/agents/: README.md  __init__.py  walking_amp_ppo_cfg.py  walking_ppo_cfg.py
config/amp/: __init__.py  curriculum_config.yaml  discriminator_cfg.yaml  domain_randomization.yaml
docs/: H1_Custom_Action_RL_Development_Guide.md  Work_Process_Checklist.md
docs/AMP_docs/: AMP_H1_Locomotion_Technical_Specification.md  AMP_Implementation_Checklist.md  Project_Structure_Design_PPO_AMP.md
docs/PPO_docs/: Isaac_Lab_H1_Default_Rewards_Analysis.md  PPO_Work_Process_Checklist.md
scripts/: play_walking.py  play_walking_amp.py  play_walking_ppo.py  test_walking_env.py  train_walking.py  train_walking_amp.py  train_walking_ppo.py
scripts/data_preprocessing/: __init__.py
scripts/data_preprocessing/retargeting/: __init__.py  smpl_loader.py
tasks/: README.md  __init__.py
tasks/locomotion/: README.md  __init__.py  env_cfg.py
tasks/walking/: __init__.py  amp_env_cfg.py  walking_env_cfg.py
tasks/walking/amp/: __init__.py  amp_rewards.py  discriminator.py  domain_randomization.py  motion_dataset.py
tasks/walking/mdp/: __init__.py  observations.py  rewards.py  terminations.py  test_rewards.py
tasks/walking/study/: 01_observations_mdp_module_study.md  02_observations_params_command_name_study.md  03_development_order_and_command_reference.md  04_mdp_module_file_paths.md  05_gait_phase_reward_review.md  (+2 more)
